--- a/client-app/public/index.html
+++ b/client-app/public/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -28,8 +27,21 @@
     <title>Reactivities</title>
   </head>
   <body>
+    <style>
+      .active-spinner {
+        display: flex !important
+      }
+    </style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">Reactivities</div>
+
+    <div id="root">
+      <div 
+        class="ui active transition visible inverted dimmer active-spinner"></div>
+        <div class="content">
+          <div class="ui text loader">Loading app...</div>
+        </div>
+      </div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
